--- a/week5/assessment5.html
+++ b/week5/assessment5.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css\styel.css">
+    <!-- Its good to see you have used a single .css file and link it to your pages-->  
     <title></title>
 </head>
   <body>
     <a href="page2.html">page 2</a>
 <h1>welcome to my website</h1>
 <p>week 5 work and i am useing everything i know</p>
-
+    
+<!-- Good to see your img element, with suitable alt text--> 
 <img src="image\fawer.JPG" alt="plant1">
 
 <h2>press the squirl</h2>
