--- a/week5/page2.html
+++ b/week5/page2.html
@@ -21,3 +21,5 @@
 </video>
   </body>
 </html>
+<!-- Make sure you have added the viewport meta tag for Mobile view--> 
+<!--Good to see your video element but without two different file formats --> 
